# simpledb-py

./: .flake8  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
simpledbpy/: buffer.py  file.py  index.py  log.py  metadata.py  parser.py  plan.py  query.py  record.py
simpledbpy/tx/: concurrency.py  recovery.py  transaction.py
tests/: test_buffer.py  test_file.py  test_log.py  test_metadata.py  test_parser.py  test_plan.py  test_query.py  test_record.py
tests/tx/: test_concurrency.py  test_recovery.py  test_transaction.py
